# swarm-spawner

./: .eslintrc.json  .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SKILL.md  package-lock.json  package.json  playground.html  playground.src.html  pyproject.toml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  deploy-playground.yml
docs/: LAUNCH-INTELLIGENCE-REPORT.md  enterprise-targets.md
docs/marketing/: dev-to-article.md  ecosystem-submissions.md  hashnode-article.md  hn-post.md  reddit-post.md
docs/plans/: 8-week-launch-plan.md
docs/specs/: 2026-04-02-approach-c-convergence-design.md
docs/superpowers/specs/: 2026-04-07-swarm-spawner-playground-design.md
examples/: enterprise-compliance.ts  hedera-pqc-validation.ts
examples/stripe-billing/: server.ts
integrations/claude-code/: hook.ts
integrations/cursor/: hook.ts
integrations/vscode/: package.json  tsconfig.json
integrations/vscode/src/: extension.ts
scripts/: build-playground.sh
src/: __init__.py  cli.ts  hedera-integration.ts  index.ts  license.ts  model-router.ts  pqc-identity.ts  result-aggregator.ts  spawner.ts  tier-enforcer.ts  types.ts
src-go/: go.mod  main.go
src-rs/: Cargo.toml
src-rs/src/: hedera_integration.rs  lib.rs  model_router.rs
tests/: license.test.ts  pqc-identity.test.ts  spawner.test.ts  test_spawner.py  tier-enforcer.test.ts
